--- a/Junior/Sunnyside Agency Landing Page/sass/layouts/_main.scss
+++ b/Junior/Sunnyside Agency Landing Page/sass/layouts/_main.scss
@@ -3,7 +3,7 @@ body {
 }
 
 .main {
-    max-width: 1440px;
+    max-width: min(1440px, 100%);
 
     margin: 0 auto;
 
